[tool.poetry]
name = "visualizer-backend"
version = "0.1.0"
description = ""
authors = ["fiwka <dropinclass1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.121.0"
uvicorn = "^0.38.0"
geopandas = "==1.1.1"
requests = "==2.32.5"
sqlalchemy = "==2.0.44"
python-multipart = "==0.0.20"
psycopg2 = "==2.9.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
